crates/ic-lint/tests/snapshots/bit_bound__invalid_bit_bounds.snap
---
source: crates/ic-lint/tests/bit_bound.rs
expression: test_lint_hir(source)
---
⨯ bit-bound: @bit_bound must be at least 1
  @ test.idl:2:12

 2 │ @bit_bound(0)
   │            ˆ bit bound out of bounds
 3 │ enum EmptyBound {
 4 │     ENUM_VALUE

⨯ bit-bound: @bit_bound(65) exceeds maximum of 64
  @ test.idl:7:12

 5 │ };
 6 │ 
 7 │ @bit_bound(65)
   │            ˆˆ bit bound out of bounds
 8 │ bitmask WideBound {
 9 │     MASK_VALUE
